--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "next": "^11.1.0",
+    "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-toastify": "^7.0.4",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
   }
 }
