--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-file-resizer": "^0.4.7",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
